<resources>
    <string name="app_name">Submission 2 _GithubUser</string>
    <string name="username_github_user">Username Github User</string>
    <string name="id_user">ID User</string>
    <string name="search_user_github">Search User Github</string>
    <string name="github_user">Github User</string>
    <string name="message">Data Tidak Ditemukan</string>
    <string name="name_github">Name Github</string>
    <string name="username_github">Username Github</string>
    <string name="followers">Followers</string>
    <string name="angka">0</string>
    <string name="work_in">Work In</string>
    <string name="location">Location</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="ubah_pengaturan_bahasa">Ubah Pengaturan Bahasa</string>
    <string name="setting">Setting</string>
    <string name="simbol_at">\@%s</string>
    <string name="kosong">Tidak Ada Data</string>
    <string name="share">Share</string>
    <string name="search_hint">Cari Users Ghithub</string>
    <string name="no_data">No Data</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="_18090011">18090011</string>
    <string name="login_share">Username</string>
    <string name="id_share">ID</string>
    <string name="avatar_url_share">Avatar</string>
    <string name="html_url_share">URL</string>
    <string name="name_share">Name</string>
    <string name="company_share">Company</string>
    <string name="location_share">Location</string>
    <string name="public_repos_share">Repository</string>
    <string name="followers_share">Followers</string>
    <string name="following_share">Following</string>
    <string name="using_share">Bagikan Menggunakan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="pesan">Masukan Username dan Password</string>
    <string name="pesan_register">Mohon Lengkapi Semua Data</string>
    <string name="berhasil">Success</string>
    <string name="favorite">Favorite</string>
    <string name="alarem">Alarem</string>
    <string name="set_remider">Set Remider</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="langguage">Langguage</string>
    <string name="success_add">Berhasil Ditambahkan Ke Favorite</string>
    <string name="success_delete">Data Dihapus Dari Favorite</string>
    <string name="logout">Logout</string>
    <string name="keluar">Keluar</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="time">09:00</string>
    <string name="github_remainder">Github Remainder</string>
    <string name="content_text">Buka Aplikasi Github Apps Sekarang!</string>
    <string name="repeting_alarm_set_up">Repeting Alarm Set Up</string>
    <string name="repeting_alarm_dibatalkan">Repeting alarm dibatalkan</string>
    <string name="register">Register</string>
    <string name="registrasi">Registrasi</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="success">Login Success</string>
    <string name="error">Username dan Password Salah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>